--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MainConnection": "Data Source=localhost;Initial Catalog=GesFilm;Integrated Security=True;Encrypt=False;ApplicationIntent=ReadWrite;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
